<resources>
    <string name="app_name">QuickNotes</string>
    <string name="quick_notes">Quick Notes</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="note_added_successfully">Note Added Successfully</string>
    <string name="note_deleted_successfully">Note Deleted Successfully</string>
    <string name="note_updated_successfully">Note Updated Successfully</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="are_you_sure_you_want_to_update_this_note">Are you sure you want to update this note?</string>
    <string name="confirmation">Confirmation</string>
    <string name="title_is_required">Title is required</string>
    <string name="content_is_required">Content is required</string>
    <string name="notes_you_add_appear_here">Notes you add appear here</string>
</resources>