<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        android:backgroundTint="@color/background_color"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_note"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:padding="15dp"
                android:layout_marginTop="25dp"
                android:inputType="text"
                android:id="@+id/etTitle"
                android:background="@drawable/custom_input_desing"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/content"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:inputType="text"
                android:id="@+id/etContent"
                android:background="@drawable/custom_input_desing"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                >

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete"
                    android:backgroundTint="@color/btn_color"
                    android:id="@+id/btnDelete"
                    android:textColor="@color/black"
                    android:layout_marginEnd="5dp"
                    />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update"
                    android:backgroundTint="@color/btn_color"
                    android:id="@+id/btnUpdate"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>