<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp"
        android:elevation="10dp"
        android:backgroundTint="@color/background_color"
        android:id="@+id/Note"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/background_color"
            android:layout_margin="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:id="@+id/tvTitle"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textSize="18sp"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:id="@+id/tvContent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="18sp"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:id="@+id/tvDate"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>